site/style/style.css
html {
    font-size: 1rem;
}

#brand{
    font-size: 2rem;
    font-weight: lighter;
}
.zero{
    margin:0;
    padding: 0;
}
#today-date{
    font-size: 0.5rem;!important;
    font-weight: bold;
}

.table{
    border: none; !important;
}
.table td{
    color: white;!important;
    font-weight: bold;
    padding: 0.75rem;!important;
    vertical-align: middle; !important;
}
.table p{
    margin: auto;
}

.btn-circle{
    width: 50px;
    height: 50px;
    padding: 2px 13px;
    border-radius: 35px;
    font-size: 24px;
    line-height: 2;
    vertical-align: middle;
}
#counter-number{
    font-weight: bold;
    font-size: 10em;
    font-style: italic;

    border: 6px red;!important;
    text-shadow: #424242 20px 20px 30px;
}
#container-counter{
    margin-top: 10rem;
    margin-bottom: 10rem;
}
#btn-plus{
    background: limegreen;
}
#btn-minus{
    background: #ff264d;
}

#btn-plus, #btn-minus{
    font-weight: bold;
    font-size: 2em;
    border-radius: 1em;
    padding-left: 1em;
    padding-right: 1em;
    border-color: antiquewhite;
    /*margin-top: 2em;*/
}

#pourcent{
    font-style: italic;
    font-size: 3rem;
    font-weight: bolder;
 }

